--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   animated_theme_switcher: ^2.0.1
   shared_preferences: ^2.0.8
   image_picker: ^0.8.4+2
+  hexcolor: ^2.0.5
+  font_awesome_flutter: ^9.1.0
 
 dev_dependencies:
   flutter_test:
