creat movie app

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "wtiau_blog",
-    "short_name": "wtiau_blog",
+    "name": "time_film",
+    "short_name": "time_film",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
