--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: wtiau_blog
+name: time_film
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.15.0-162.0.dev <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,20 +31,9 @@ dependencies:
     sdk: flutter
 
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  carousel_slider: ^4.0.0
   cupertino_icons: ^1.0.2
-  flutter_svg: ^0.22.0
-  connectivity: ^3.0.6
-  sqflite: ^2.0.0+4
-  http: ^0.13.3
-  cached_network_image: ^3.1.0
-  curved_navigation_bar: ^1.0.1
-  animated_theme_switcher: ^2.0.1
-  shared_preferences: ^2.0.8
-  image_picker: ^0.8.4+2
-  hexcolor: ^2.0.5
-  font_awesome_flutter: ^9.1.0
+  cached_network_image: ^3.2.0
 
 dev_dependencies:
   flutter_test:
@@ -69,9 +58,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/icons/
-    - assets/images/
+  # assets:
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -84,13 +73,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+
   fonts:
-    - family: Sans serif
+    - family: Yekan
       fonts:
-        - asset: assets/fonts/sansserifflf-demibold.otf
-
-
+        - asset: assets/fonts/Yekan.ttf
+          weight: 500
         
+  # fonts:
+  #   - family: Schyler
+  #     fonts:
+  #       - asset: fonts/Schyler-Regular.ttf
+  #       - asset: fonts/Schyler-Italic.ttf
+  #         style: italic
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
