--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   carousel_slider: ^4.0.0
   cupertino_icons: ^1.0.2
   cached_network_image: ^3.2.0
+  sqflite: ^2.0.0+4
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
